--- a/7-JMS-summary-and-project-kickoff/students/supermarket/pom.xml
+++ b/7-JMS-summary-and-project-kickoff/students/supermarket/pom.xml
@@ -12,6 +12,7 @@
         <module>analysis</module>
         <module>common</module>
         <module>prototype</module>
+		<module>reporting</module>
     </modules>
     <packaging>pom</packaging>
 
